Ne yaptim bilmiyorum ama calisiyor
